1.5/multitool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool:alpine-extra
        ports:
        - containerPort: 8080
